# data_shield

./: CMakeLists.txt  README.md  clean.sh
include/: Uptime.h  local.h
include/cli/: args.h  client.h  host_info.h  server.h  uptime.h
include/client/: client.h  common_client.h  component_block_client.h
include/server/: async_call_base.h  async_common_service.h  async_component_block_service.h  common_helper.h  common_service_impl.h  component_block_helper.h  component_block_service_impl.h  server.h  sync_common_service.h  sync_component_block_service.h
include/service/: common_helper.h  server.h  sync_component_block_service.h
include/stub/: client.h  common_stub.h  component_block_stub.h
include/util/: host_info.h  uptime.h
proto/: common.proto  component_block.proto  generate_grpc.sh
python/: client.py
src/: local.cpp  main.cpp
src/cli/: args.cpp  client.cpp  data_shield_client.cpp  data_shield_server.cpp  host_info.cpp  main.cpp  server.cpp  uptime.cpp
src/client/: client.cpp  common_client.cpp  component_block_client.cpp
src/server/: async_common_service.cpp  async_component_block_service.cpp  common_helper.cpp  common_service_impl.cpp  component_block_helper.cpp  component_block_service_impl.cpp  server.cpp  sync_common_service.cpp  sync_component_block_service.cpp
src/service/: async_common_service.cpp  async_component_block_service.cpp  common_helper.cpp  component_block_helper.cpp  server.cpp  sync_common_service.cpp  sync_component_block_service.cpp
src/stub/: client.cpp  common_stub.cpp  component_block_stub.cpp
src/util/: host_info.cpp  uptime.cpp
